components/cpc-batch/sg_cpc_batch_efs.tf
resource "aws_security_group" "cpc_batch_efs" {
  name        = "${local.csi}-cpc-batch-efs"
  description = "${local.csi}-cpc-batch-efs"
  vpc_id      = "${data.terraform_remote_state.base.vpc_id}"

  tags = "${merge(
    local.default_tags,
    map(
      "Name", "${local.csi}-cpc-batch-efs"
    )
  )}"
}
